fixed naming convention errors

--- a/hackathonExpress/package.json
+++ b/hackathonExpress/package.json
@@ -11,7 +11,9 @@
     "mongoose": "*",
     "body-parser": "*",
     "cors": "*",
-    "nodemon": "*"
+    "nodemon": "*",
+    "passport": "*",
+    "bcryptjs": "*"
   },
   "author": "",
   "license": "ISC"
