fixed /users and /guests endpoints and started query and auth logic

--- a/hackathonExpress/package.json
+++ b/hackathonExpress/package.json
@@ -13,7 +13,8 @@
     "cors": "*",
     "nodemon": "*",
     "passport": "*",
-    "bcryptjs": "*"
+    "bcryptjs": "*",
+    "jsonwebtoken": "*"
   },
   "author": "",
   "license": "ISC"
